--- a/everestrs/everestrs-build/jinja/client.jinja2
+++ b/everestrs/everestrs-build/jinja/client.jinja2
@@ -5,9 +5,25 @@ pub(crate) trait {{trait.name | title}}ClientSubscriber: Sync + Send {
 {% endfor %}
 }
 
+/// Extended interface of [{{trait.name | title}}ClientSubscriber]
+pub(crate) trait {{trait.name | title}}ClientSubscriberExt: Sync + Send {
+{% for var in trait.vars %}
+   fn on_{{ var.name | snake }}_named<'a>(&self, publishers: &ModulePublisher, name: &'a str, value: {{ var.data_type.name }});
+{% endfor %}
+}
+
+impl<S: {{trait.name | title}}ClientSubscriber> {{trait.name | title}}ClientSubscriberExt for S {
+{% for var in trait.vars %}
+   fn on_{{ var.name | snake }}_named<'a>(&self, publishers: &ModulePublisher, name: &'a str, value: {{ var.data_type.name }}) {
+      self.on_{{ var.name | snake }}(publishers, value)
+   }
+{% endfor %}
+}
+
 fn dispatch_variable_to_{{ trait.name | snake }}(
    publishers: &ModulePublisher,
-   client_subscriber: &dyn {{trait.name | title}}ClientSubscriber,
+   client_subscriber: &dyn {{trait.name | title}}ClientSubscriberExt,
+   implementation_id: &str,
    name: &str,
    value: ::serde_json::Value,
 ) -> ::everestrs::Result<()> {
@@ -16,7 +32,7 @@ fn dispatch_variable_to_{{ trait.name | snake }}(
    "{{ var.name }}" => {
    let v: {{ var.data_type.name }} = ::serde_json::from_value(value)
          .map_err(|_| ::everestrs::Error::InvalidArgument("{{ var.name }}"))?;
-         client_subscriber.on_{{ var.name | snake }}(publishers, v);
+         client_subscriber.on_{{ var.name | snake }}_named(publishers, implementation_id, v);
                 Ok(())
     },
 {%- endfor %}
@@ -37,10 +53,10 @@ impl {{trait.name | title }}ClientPublisher {
    {%- for arg in cmd.arguments %}
    /// `{{arg.name}}`: {{arg.description | replace("\n", " ")}}
    {%- endfor %}
-   {%- if cmd.result -%}
+   {% if cmd.result -%}
    ///
    /// Returns: {{cmd.result.description | replace("\n", " ")}}
-   {% endif %}
+   {% endif -%}
    pub(crate) fn {{cmd.name | identifier}}(&self,
    {%- for arg in cmd.arguments %}
       {{arg.name | identifier }}: {{arg.data_type.name}},
