--- a/everestrs/everestrs-build/jinja/module.jinja2
+++ b/everestrs/everestrs-build/jinja/module.jinja2
@@ -34,10 +34,10 @@ pub(crate) struct ModulePublisher {
 pub(crate) struct Module {
     on_ready: ::std::sync::Arc<dyn OnReadySubscriber>,
 {% for provide in provides %}
-   {{ provide.implementation_id | identifier }}: ::std::sync::Arc<dyn {{provide.interface | title}}ServiceSubscriber>,
+   {{ provide.implementation_id | identifier }}: ::std::sync::Arc<dyn {{provide.interface | title}}ServiceSubscriberExt>,
 {% endfor %}
 {% for require in requires %}
-   {{ require.implementation_id | identifier }}: ::std::sync::Arc<dyn {{require.interface | title}}ClientSubscriber>,
+   {{ require.implementation_id | identifier }}: ::std::sync::Arc<dyn {{require.interface | title}}ClientSubscriberExt>,
 {% endfor %}
 
     publisher: ModulePublisher,
@@ -48,10 +48,10 @@ impl Module {
     pub(crate) fn new(
         on_ready: ::std::sync::Arc<dyn OnReadySubscriber>,
 {% for provide in provides %}
-        {{ provide.implementation_id | identifier }}: ::std::sync::Arc<dyn {{provide.interface | title}}ServiceSubscriber>,
+        {{ provide.implementation_id | identifier }}: ::std::sync::Arc<dyn {{provide.interface | title}}ServiceSubscriberExt>,
 {% endfor %}
 {% for require in requires %}
-      {{ require.implementation_id | identifier }}: ::std::sync::Arc<dyn {{require.interface | title}}ClientSubscriber>,
+      {{ require.implementation_id | identifier }}: ::std::sync::Arc<dyn {{require.interface | title}}ClientSubscriberExt>,
 {% endfor %}
     ) -> ::std::sync::Arc<Self> {
         let runtime = ::everestrs::Runtime::new();
@@ -94,7 +94,7 @@ impl ::everestrs::Subscriber for Module {
         match implementation_id {
 {% for provide in provides %}
    "{{ provide.implementation_id }}" => {
-   dispatch_command_to_{{ provide.interface | snake }}(&self.publisher, self.{{ provide.implementation_id | identifier }}.as_ref(), name, parameters)
+   dispatch_command_to_{{ provide.interface | snake }}(&self.publisher, self.{{ provide.implementation_id | identifier }}.as_ref(), implementation_id, name, parameters)
 },
 {% endfor %}
             _ => Err(::everestrs::Error::InvalidArgument(
@@ -112,7 +112,7 @@ impl ::everestrs::Subscriber for Module {
         match implementation_id {
 {% for req in requires %}
          "{{ req.implementation_id }}" => {
-         dispatch_variable_to_{{ req.interface | snake }}(&self.publisher, self.{{ req.implementation_id  | identifier }}.as_ref(), name, value)
+         dispatch_variable_to_{{ req.interface | snake }}(&self.publisher, self.{{ req.implementation_id  | identifier }}.as_ref(), implementation_id, name, value)
       },
       {% endfor %}
       _ => Err(::everestrs::Error::InvalidArgument(
