--- a/everestrs/everestrs-build/jinja/service.jinja2
+++ b/everestrs/everestrs-build/jinja/service.jinja2
@@ -11,7 +11,7 @@ pub(crate) trait {{trait.name | title}}ServiceSubscriber: Sync + Send {
    /// Returns: {{cmd.result.description | replace("\n", " ")}}
    {% endif -%}
    fn {{cmd.name}}(&self,
-      publishers: &ModulePublisher,
+      context: &Context,
    {%- for arg in cmd.arguments %}
       {{arg.name | identifier }}: {{arg.data_type.name}},
    {%- endfor %}
@@ -20,62 +20,12 @@ pub(crate) trait {{trait.name | title}}ServiceSubscriber: Sync + Send {
    {%- else -%}
       ()
    {%- endif -%}>;
-{% endfor %}
-}
-
-/// Extended interface of [{{trait.name | title}}ServiceSubscriber]
-pub(crate) trait {{trait.name | title}}ServiceSubscriberExt: Sync + Send {
-{%- for cmd in trait.cmds %}
-   /// {{cmd.description | replace("\n", " ")}}
-   ///
-   /// `name`: The name of the interface.
-   {%- for arg in cmd.arguments %}
-   /// `{{arg.name}}`: {{arg.description | replace("\n", " ")}}
-   {%- endfor %}
-   {% if cmd.result -%}
-   ///
-   /// Returns: {{cmd.result.description | replace("\n", " ")}}
-   {% endif -%}
-   fn {{cmd.name}}_named<'a>(&self,
-      publishers: &ModulePublisher,
-      name: &'a str,
-   {%- for arg in cmd.arguments %}
-      {{arg.name | identifier }}: {{arg.data_type.name}},
-   {%- endfor %}
-   ) -> ::everestrs::Result<{%- if cmd.result -%}
-      {{cmd.result.data_type.name}}
-   {%- else -%}
-      ()
-   {%- endif -%}>;
-{% endfor %}
-}
-
-impl<S: {{trait.name | title}}ServiceSubscriber> {{trait.name | title}}ServiceSubscriberExt for S {
-   {%- for cmd in trait.cmds %}
-   fn {{cmd.name}}_named<'a>(&self,
-      publishers: &ModulePublisher,
-      name: &'a str,
-   {%- for arg in cmd.arguments %}
-      {{arg.name | identifier }}: {{arg.data_type.name}},
-   {%- endfor %}
-   ) -> ::everestrs::Result<{%- if cmd.result -%}
-      {{cmd.result.data_type.name}}
-   {%- else -%}
-      ()
-   {%- endif -%}> {
-      self.{{cmd.name}}(publishers, 
-      {%- for arg in cmd.arguments %}
-         {{arg.name | identifier }},
-      {%- endfor %}
-      )
-   }
 {% endfor %}
 }
 
 fn dispatch_command_to_{{ trait.name | snake }}(
-   publishers: &ModulePublisher,
-   service: &dyn {{trait.name | title}}ServiceSubscriberExt,
-   implementation_id: &str,
+   context: &Context,
+   service: &dyn {{trait.name | title}}ServiceSubscriber,
    name: &str,
    mut parameters: ::std::collections::HashMap<String, ::serde_json::Value>,
 ) -> ::everestrs::Result<::serde_json::Value> {
@@ -89,7 +39,7 @@ fn dispatch_command_to_{{ trait.name | snake }}(
           )
           .map_err(|_| ::everestrs::Error::InvalidArgument("{{ arg.name }}"))?;
 {%- endfor %}
-       let retval = service.{{ cmd.name }}_named(publishers, implementation_id,
+       let retval = service.{{ cmd.name }}(context,
 {%- for arg in cmd.arguments %}
             {{ arg.name | identifier }},
 {%- endfor %}
