--- a/everestrs/everestrs-build/jinja/module.jinja2
+++ b/everestrs/everestrs-build/jinja/module.jinja2
@@ -46,6 +46,7 @@ pub(crate) struct Module {
 /// The context structure.
 pub struct Context<'a> {
     pub publisher: &'a ModulePublisher,
+    {# TODO(ddo) Clarify the naming. #}
     pub name: &'a str,
 }
 
