--- a/everestrs/everestrs-build/jinja/module.jinja2
+++ b/everestrs/everestrs-build/jinja/module.jinja2
@@ -6,7 +6,7 @@ mod generated {
     clippy::upper_case_acronyms,
     clippy::useless_conversion,
     dead_code,
-    non_camel_case_types
+    non_camel_case_types,
     unused_mut,
     unused_variables,
 )]
