--- a/everestrs/everestrs-build/jinja/types.jinja2
+++ b/everestrs/everestrs-build/jinja/types.jinja2
@@ -5,7 +5,7 @@ pub mod {{ name }} {
 {% endfor %}
 
 {% for object in types.objects %}
-#[derive(Debug, Clone, serde::Serialize, serde::Deserialize)]
+#[derive(Debug, Clone, __serde::Serialize, __serde::Deserialize)]
 pub struct {{ object.name }} {
 {% for p in object.properties %}
 /// {{ p.description | replace("\n", " ") }}
@@ -16,7 +16,7 @@ pub {{ p.name | identifier }}: {{ p.data_type.name }},
 {% endfor %}
 
 {% for enum in types.enums %}
-#[derive(Debug, Clone, serde::Serialize, serde::Deserialize)]
+#[derive(Debug, Clone, __serde::Serialize, __serde::Deserialize)]
 pub enum {{ enum.name }} {
 {% for item in enum.items %}
 {{ item }},
