--- a/everestrs/everestrs-build/jinja/module.jinja2
+++ b/everestrs/everestrs-build/jinja/module.jinja2
@@ -9,7 +9,10 @@ mod generated {
     non_camel_case_types,
     unused_mut,
     unused_variables,
+    unused_imports,
 )]
+
+use everestrs::serde_json as __serde_json;
 
 pub mod types {
 {% include "types" %}
