--- a/everestrs/everestrs-build/jinja/types.jinja2
+++ b/everestrs/everestrs-build/jinja/types.jinja2
@@ -4,8 +4,11 @@ pub mod {{ name }} {
 }
 {% endfor %}
 
+use everestrs::serde as __serde;
+
 {% for object in types.objects %}
 #[derive(Debug, Clone, __serde::Serialize, __serde::Deserialize)]
+#[serde(crate = "__serde")]
 pub struct {{ object.name }} {
 {% for p in object.properties %}
 /// {{ p.description | replace("\n", " ") }}
@@ -17,6 +20,7 @@ pub {{ p.name | identifier }}: {{ p.data_type.name }},
 
 {% for enum in types.enums %}
 #[derive(Debug, Clone, __serde::Serialize, __serde::Deserialize)]
+#[serde(crate = "__serde")]
 pub enum {{ enum.name }} {
 {% for item in enum.items %}
 {{ item }},
