--- a/everestrs/everestrs-build/jinja/service.jinja2
+++ b/everestrs/everestrs-build/jinja/service.jinja2
@@ -51,12 +51,18 @@ fn dispatch_command_to_{{ trait.name | snake }}(
    }
 }
 
+pub(crate) mod __mockall_{{trait.name | snake }} {
+
 #[derive(Clone)]
 pub(crate) struct {{trait.name | title }}ServicePublisher {
-    implementation_id: &'static str,
-    runtime: ::std::pin::Pin<::std::sync::Arc<::everestrs::Runtime>>,
+   #[cfg(not(test))]
+   pub(super) implementation_id: &'static str,
+
+   #[cfg(not(test))]
+   pub(super) runtime: ::std::pin::Pin<::std::sync::Arc<::everestrs::Runtime>>,
 }
 
+#[everestrs::mockall::automock]
 impl {{trait.name | title }}ServicePublisher {
 {% for var in trait.vars %}
    pub(crate) fn {{ var.name | identifier }}(&self, value: {{ var.data_type.name }}) -> ::everestrs::Result<()> {
@@ -65,3 +71,7 @@ impl {{trait.name | title }}ServicePublisher {
    }
 {% endfor %}
 }
+
+}
+#[everestrs::mockall_double::double]
+pub(crate) use __mockall_{{trait.name | snake }}::{{trait.name | title }}ServicePublisher;
