--- a/everestrs/everestrs-build/jinja/service.jinja2
+++ b/everestrs/everestrs-build/jinja/service.jinja2
@@ -51,18 +51,15 @@ fn dispatch_command_to_{{ trait.name | snake }}(
    }
 }
 
-pub(crate) mod __mockall_{{trait.name | snake }} {
+pub(crate) mod __mockall_{{trait.name | snake }}_service {
 
 #[derive(Clone)]
 pub(crate) struct {{trait.name | title }}ServicePublisher {
-   #[cfg(not(test))]
    pub(super) implementation_id: &'static str,
-
-   #[cfg(not(test))]
    pub(super) runtime: ::std::pin::Pin<::std::sync::Arc<::everestrs::Runtime>>,
 }
 
-#[everestrs::mockall::automock]
+#[cfg_attr(feature="mockall", mockall::automock)]
 impl {{trait.name | title }}ServicePublisher {
 {% for var in trait.vars %}
    pub(crate) fn {{ var.name | identifier }}(&self, value: {{ var.data_type.name }}) -> ::everestrs::Result<()> {
@@ -73,5 +70,5 @@ impl {{trait.name | title }}ServicePublisher {
 }
 
 }
-#[everestrs::mockall_double::double]
-pub(crate) use __mockall_{{trait.name | snake }}::{{trait.name | title }}ServicePublisher;
+#[cfg_attr(feature="mockall", mockall_double::double)]
+pub(crate) use __mockall_{{trait.name | snake }}_service::{{trait.name | title }}ServicePublisher;
