--- a/everestrs/everestrs-build/jinja/client.jinja2
+++ b/everestrs/everestrs-build/jinja/client.jinja2
@@ -26,6 +26,8 @@ fn dispatch_variable_to_{{ trait.name | snake }}(
 
 pub(crate) mod __mockall_{{trait.name | snake }}_client {
 
+use super::__serde_json;
+
 #[derive(Clone)]
 pub(crate) struct {{trait.name | title }}ClientPublisher {
    pub(super) implementation_id: &'static str,
