--- a/everestrs/everestrs-build/jinja/service.jinja2
+++ b/everestrs/everestrs-build/jinja/service.jinja2
@@ -59,7 +59,6 @@ pub(crate) struct {{trait.name | title }}ServicePublisher {
    pub(super) runtime: ::std::pin::Pin<::std::sync::Arc<::everestrs::Runtime>>,
 }
 
-#[cfg_attr(feature="mockall", mockall::automock)]
 impl {{trait.name | title }}ServicePublisher {
 {% for var in trait.vars %}
    pub(crate) fn {{ var.name | identifier }}(&self, value: {{ var.data_type.name }}) -> ::everestrs::Result<()> {
@@ -67,6 +66,19 @@ impl {{trait.name | title }}ServicePublisher {
       Ok(())
    }
 {% endfor %}
+}
+
+#[cfg(feature="mockall")]
+mockall::mock!{
+   pub(crate) {{trait.name | title }}ServicePublisher {
+{% for var in trait.vars %}
+   pub(crate) fn {{ var.name | identifier }}(&self, value: {{ var.data_type.name }}) -> ::everestrs::Result<()>;
+{% endfor %}
+   }
+
+   impl Clone for {{trait.name | title }}ServicePublisher {
+      fn clone(&self) -> Self;
+   }
 }
 
 }
